--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,14 @@
             <version>1.2.3</version>
         </dependency>
 
+        <!-- cglib 反射控件 -->
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>3.3.0</version>
+        </dependency>
+
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
