--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,13 @@
             <version>28.1-jre</version>
         </dependency>
 
+        <!-- rxjava -->
+        <dependency>
+            <groupId>io.reactivex.rxjava2</groupId>
+            <artifactId>rxjava</artifactId>
+            <version>2.2.19</version>
+        </dependency>
+
 
         <dependency>
             <groupId>junit</groupId>
