上传nginx配置文件
Signed-off-by: 98762 <987625922@qq.com>

--- a/file/nginx.conf
+++ b/file/nginx.conf
@@ -60,12 +60,14 @@ http {
             index  index.html index.htm;
         }
 
-        #error_page  404              /404.html;
+        #作为图片服务器
+        location /images {
+           #图片路径
+           root /home/soft01/www;
+           #打开目录浏览给你
+           autoindex on;
+        }
 
-        # redirect server error pages to the static page /50x.html
-        #
-        
-        
         #错误的反馈页面
         error_page   500 502 503 504  /50x.html;
         #错误的页面配置
