上传nginx配置文件
Signed-off-by: 98762 <987625922@qq.com>

--- a/file/nginx.conf
+++ b/file/nginx.conf
@@ -41,6 +41,12 @@ http {
     #开启gzip压缩
     #gzip  on;
 
+    #代理的后台服务器列表（分布式，反向代理）
+    upstream server_name1{
+        server 192.168.1.66:8080
+    }
+    #分布式，反向代理 END
+
     #虚拟主机配置
     server {
         #监听的端口
@@ -59,7 +65,10 @@ http {
             #默认首页
             index  index.html index.htm;
         }
-
+        #分布式，反向代理（和上面的location冲突，只可以选一个写）
+        location /{
+            proxy_pass http://server_name1; //指定代理后台的名字
+        }
         #作为图片服务器
         location /images {
            #图片路径
