--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,13 @@
             <version>2.2.19</version>
         </dependency>
 
+        <!-- gson -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.5</version>
+        </dependency>
+
 
         <dependency>
             <groupId>junit</groupId>
