上传nginx配置文件
Signed-off-by: 98762 <987625922@qq.com>

--- a/file/nginx/nginx.conf
+++ b/file/nginx/nginx.conf
@@ -43,7 +43,10 @@ http {
 
     #代理的后台服务器列表（分布式，反向代理）
     upstream server_name1{
-        server 192.168.1.66:8080
+        server 192.168.1.66:8080;
+        server 192.168.1.66:8081;
+        server 192.168.1.66:8082;
+
     }
     #分布式，反向代理 END
 
@@ -69,12 +72,19 @@ http {
         location /{
             proxy_pass http://server_name1; //指定代理后台的名字
         }
+
         #作为图片服务器
         location /images {
            #图片路径
            root /home/soft01/www;
            #打开目录浏览给你
            autoindex on;
+        }
+
+        #动静分离中的静态，动态是上面分布式的location
+        #表示url为  /static/*.xxx 的图片或者js等静态资源则会到/html/static目录下去寻找资源
+        location /static/~(.*)(\.jpg|\.png|\.gif|\.jepg|\.css|\.js|\.css){  #  静态资源则路由到这里
+        　　　　root /home/soft01/www/static;
         }
 
         #错误的反馈页面
